--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ body{
     color: #295757;
     font-size: 20px;
     text-align:left;
-    letter-spacing: 0.7px;
+    letter-spacing: 1.2px;
 }
 
 .arch-container {
@@ -252,5 +252,5 @@ body{
 
 .block-chain-paragraph{
     margin-bottom: 30px;
-    letter-spacing: 0.8px;
+    letter-spacing: 1.2px;
 }
