--- a/navbar.css
+++ b/navbar.css
@@ -7,7 +7,7 @@ html, body {
 
 .unwita-logo-img{
     width: 100px;
-    height: 30px;
+    /* height: 30px; */
      transition: transform 0.3s ease, color 0.3s ease;
 }
 
@@ -20,7 +20,8 @@ html, body {
     background-color: #255f5f;
     border: none;
     width: 100%;
-    height: 10%;
+    margin: 20px;
+    /* height: 10%; */
     z-index: 10;
 }
 
@@ -53,7 +54,7 @@ nav {
 
 .navbar-brand {
     width: 200px;
-    height: 55px;
+    /* height: 55px; */
     background-color: bisque;
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
